# Seg4Live2D

./: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml  requirements_cpu.txt
.claude/: settings.local.json
.claude/commands/: README.md  commit-and-push.md  feature-complete.md  merge-branch.md  parallel-dev.md  quick-search.md  reflect-and-push.md  setup-branch.md  status-update.md  sync-branch.md  test-and-lint.md
config/app/: default.yaml  development.yaml
data/samples/: README.md
docs/: README.md
docs/architecture/: system_design.md
docs/planning/: implementation_plan.md  risk_assessment.md  sam2_implementation_plan.md
docs/specifications/: directory_structure.md  technical_requirements.md
scripts/: download_sam2_models.py  download_yolo_models.py  run_segmentation_test.py  sam2_optimal_segmentation.py  sam2_precise_part_segmentation.py  sam2_segmentation.py  sam2_ultra_precise_segmentation.py  setup_and_run.py  test_gpu_segmentation.py  test_high_precision_segmentation.py  test_instance_segmentation.py  test_sam2_basic.py  test_sam2_comprehensive_prompts.py  test_sam2_detailed_parts.py  test_sam2_hybrid_enhancement.py  test_sam2_model_comparison.py  test_sam2_precision_enhancement.py  test_sam2_prompt_visualization.py  test_sam2_prompts.py  test_sam2_visual_comparison.py
src/: __init__.py
src/core/: __init__.py
src/core/sam2/: __init__.py  prompt_handler.py  sam2_model.py
src/core/segmentation/: __init__.py  image_processor.py  segmentation_engine.py  yolo_model.py
src/core/utils/: __init__.py  config.py  exceptions.py  file_handler.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_segmentation_pipeline.py
